# FFmpeg_CentOS_demo

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.sh
demo/: cmd-dir.cpp  ffmpeg-info.cpp  hello-world.cpp  video_decoder.cpp
dep/FFmpeg/include/libavutil/: ffversion.h
inc/: test.h
src/: io_data.cpp  test.cpp  video_decoder_core.cpp  video_encoder_core.cpp
video/: bus_cif.yuv  decode_input.h264  decode_output.yuv
